# lct-drone

./: .gitignore  README.md  docker-compose.yml  openapi_schema.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .env  .gitignore  API_COMPLETE_GUIDE.md  Dockerfile  ENDPOINTS_SUMMARY.md  Makefile  docker-compose.yml  openapi_schema.yml  package.json  pyproject.toml
apps/backend/docker/postgres/: init.sql
apps/backend/src/apps/: __init__.py
apps/backend/src/apps/flights/: __init__.py  admin.py  analytics_services.py  api_urls.py  api_viewsets.py  apps.py  filters.py  forms.py  models.py  serializers.py  services.py
apps/backend/src/config/: settings.py  urls.py
apps/backend/src/core/: models.py
apps/backend/src/templates/: 404.html  500.html  base.html
apps/backend/src/templates/admin/flights/: flight_plan_upload.html
apps/backend/src/templates/admin/flights/flightplan/: change_list.html
apps/backend/tegola/: tegola.config.toml
apps/frontend/: .env  .env.production  env.d.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/frontend/src/app/: index.ts
apps/frontend/src/app/assets/: styles.css
apps/frontend/src/app/store/: index.ts  regions.general.store.ts  regions.store.ts  statistics.store.ts  users.store.ts
apps/frontend/src/app/ui/: App.vue
apps/frontend/src/components/: index.ts
apps/frontend/src/components/card/: Card.vue
apps/frontend/src/components/chart-lines/: ChartLines.vue  index.ts
apps/frontend/src/components/fly-chart-bar/: FlyChartBar.vue  index.ts
apps/frontend/src/components/indicator/: Indicator.vue
apps/frontend/src/components/layout-warepper/: LayoutWrapper.vue  index.ts
apps/frontend/src/components/map/: Map.vue
apps/frontend/src/components/table/: Table.vue
apps/frontend/src/components/top/: Top.vue  index.ts
apps/frontend/src/layouts/: index.ts
apps/frontend/src/layouts/auth/: Auth.vue
apps/frontend/src/layouts/default/: Default.vue
apps/frontend/src/layouts/load/: Load.vue  index.ts
apps/frontend/src/pages/: index.ts
apps/frontend/src/utils/: exportToImage.ts  index.ts  paints.value.ts
(+8 files in other folders)
